--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -92,3 +92,10 @@ publisher = {IEEE Computer Society}
 @MISC{spec-url,
   howpublished = {\url{http://www.spec.org}}
 }
+
+
+@article{program-phases,
+  title={Time varying behavior of programs},
+  author={Timothy {Sherwood} and Brad {Calder}},
+  year={1999},
+}
