--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -93,6 +93,21 @@ publisher = {IEEE Computer Society}
   howpublished = {\url{http://www.spec.org}}
 }
 
+@MISC{milc-url,
+  howpublished = {\url{http://www.spec.org/auto/cpu2006/Docs/433.milc.html}}
+}
+
+@MISC{bwaves-url,
+  howpublished = {\url{http://www.spec.org/auto/cpu2006/Docs/410.bwaves.html}}
+}
+
+@MISC{bzip-url,
+  howpublished = {\url{http://www.spec.org/auto/cpu2006/Docs/401.bzip2.html}}
+}
+
+@MISC{deal-url,
+  howpublished = {\url{http://www.spec.org/auto/cpu2006/Docs/447.dealII.html}}
+}
 
 @article{program-phases,
   title={Time varying behavior of programs},
