--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -55,7 +55,6 @@ booktitle = {Proceedings of the international symposium on Code generation and o
 series = {CGO '04},
 year = {2004},
 pages = {89--},
-url = {http://dl.acm.org/citation.cfm?id=977395.977664},
 publisher = {IEEE Computer Society}
 }
 
@@ -107,6 +106,10 @@ publisher = {IEEE Computer Society}
 
 @MISC{deal-url,
   howpublished = {\url{http://www.spec.org/auto/cpu2006/Docs/447.dealII.html}}
+}
+
+@MISC{dynamorio-url,
+  howpublished = {\url{http://dynamorio.org}}
 }
 
 @article{program-phases,
