--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -117,3 +117,14 @@ publisher = {IEEE Computer Society}
   author={Timothy {Sherwood} and Brad {Calder}},
   year={1999},
 }
+
+@article{PG74,
+author = {Gerald J. {Popek} and Robert P. {Goldberg}},
+title = {Formal requirements for virtualizable third generation architectures},
+journal = {Comm-ACM},
+volume = {17},
+number = {7},
+year = {1974},
+pages = {412--421},
+publisher = {ACM},
+}
